<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_account"
        android:textSize="28sp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:hint="@string/first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="259dp"
        android:layout_height="38dp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/editEmailtxt"
        android:layout_width="259dp"
        android:layout_height="38dp"
        android:hint="@string/email"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editCardNum"
        android:layout_width="263dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="text" />

    <Switch
        android:id="@+id/isVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/are_you_a_vendor" />

    <EditText
        android:id="@+id/vendorId"
        android:layout_width="258dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/vendor_id"
        android:inputType="textPersonName"
        android:visibility="invisible" />

    <Button
        android:id="@+id/saveEditBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"/>

</LinearLayout>