<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headerAccount"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:text="@string/account"
        android:textAlignment="center"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@+id/headerAccount"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/AccountName"
        android:layout_width="131dp"
        android:layout_height="18dp"
        android:layout_toRightOf="@+id/textName"
        android:layout_alignTop="@id/textName"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/textName"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/AccountEmail"
        android:layout_width="131dp"
        android:layout_height="18dp"
        android:layout_toRightOf="@+id/textEmail"
        android:layout_alignTop="@id/textEmail"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/textVendorID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vendor_id"
        android:layout_below="@+id/textEmail"
        android:layout_marginLeft="25dp"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/AccountVendorID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textVendorID"
        android:layout_alignTop="@id/textVendorID"
        android:layout_marginLeft="5dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/editInfoBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_info"
        android:layout_below="@+id/AccountVendorID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/chngPassBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_below="@id/editInfoBut"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/scanBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr"
        android:layout_below="@id/chngPassBut"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/ButGen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_bill"
        android:layout_below="@id/scanBut"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/ButEditMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_menu"
        android:layout_below="@id/ButGen"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/registerVendorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_vendor"
        android:layout_below="@id/ButEditMenu"
        android:layout_centerHorizontal="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:id="@+id/frameLayout"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerVendorButton"
        android:layout_alignParentBottom="true"

        android:layout_marginTop="11dp"
        android:layout_marginBottom="1dp"
        android:background="@color/colorPrimary"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>