<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/edit_account"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editFirstName"
        android:background="@drawable/login_edit_text"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:hint="@string/first_name"
        android:textAlignment="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/editLastName"
        android:background="@drawable/login_edit_text"
        android:layout_width="259dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:textAlignment="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/editEmailtxt"
        android:background="@drawable/login_edit_text"
        android:layout_width="259dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/email_login"
        android:textAlignment="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/editCardNum"
        android:background="@drawable/login_edit_text"
        android:layout_width="263dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="Card Number"
        android:textAlignment="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/editExpDate"
        android:background="@drawable/login_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="Exp. Date"
        android:inputType="date"
        android:maxLength="5"/>

    <EditText
        android:id="@+id/editCVV"
        android:background="@drawable/login_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/cvv"
        android:inputType="text" />

    <Switch
        android:id="@+id/isVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/are_you_a_vendor"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/vendorId"
        android:layout_width="258dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edit_text"
        android:hint="@string/vendor_id"
        android:inputType="textPersonName"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/saveEditBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_pink_white_outline"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:text="@string/save"
        android:textColor="@color/white"/>

</LinearLayout>