<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EF476F"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/textView2"
        android:background="#073B4C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:text="@string/tabdab"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/uEmail"
        android:background="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|textPersonName" />

    <EditText
        android:id="@+id/uFirstName"
        android:background="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/uLastName"
        android:background="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/uPassword"
        android:background="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textWebPassword" />

    <EditText
        android:id="@+id/uCardNum"
        android:background="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Credit Card Number"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/uExpDate"
        android:background="#FFFFFF"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:ems="10"
        android:hint="Exp Date"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/uCVV"
        android:background="#FFFFFF"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="CVV"
        android:inputType="textPersonName" />

    <Switch
        android:id="@+id/isVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/are_you_a_vendor" />

    <EditText
        android:id="@+id/vendorId"
        android:background="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/vendor_id"
        android:inputType="textPersonName"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnRegister"
        android:background="#073B4C"
        android:layout_width="215dp"
        android:layout_height="49dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/register" />

</LinearLayout>