<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateVendor">

    <TextView
        android:id="@+id/textRegisterVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/register_vendor"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editVendorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/vendor_name"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/butRegisterVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp" />
</LinearLayout>