<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".EditVendorInfoFragment"
    android:padding="5dp">

    <TextView
        android:id="@+id/editVendorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/edit_vendor_information"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editVendorName"
        android:background="@drawable/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:hint="@string/edit_name"
        android:inputType="text" />

    <Button
        android:id="@+id/saveEditBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_pink_white_outline"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:baselineAligned="false"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

</LinearLayout>