<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="36dp">
    </TextView>

    <Button
        android:id="@+id/chngPassBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:padding="5dp"
        android:background="@drawable/button_pink_white_outline"
        android:text="@string/reset_password"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/registerVendorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:padding="5dp"
        android:text="@string/register_vendor"
        android:textAllCaps="false"
        android:background="@drawable/button_pink_white_outline"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/editInfoBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:padding="5dp"
        android:background="@drawable/button_pink_white_outline"
        android:text="@string/edit_info"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>